gcc/testsuite/rust/rustc/ui/parser/missing-fn-issue-65381-3_dg.rs
pub const initial_value() -> Self {
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

